--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,15 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// added libraries
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2', version: '2.7.9'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+	implementation 'de.focus-shift:jollyday-jaxb:0.15.0'
+
+
 }
 
 tasks.named('test') {
